--- a/index.html
+++ b/index.html
@@ -1,45 +1,28 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "
-
-<html xmlns="
-
+<!DOCTYPE html>
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>test</title>
-<style type="text/css">
-*{
-    margin:0;
-    padding:0;
-    }
-#div_body{
-    width:960px;
-    height:auto;
-    margin:0 auto;
-    border:1px solid #000;/*这里我设置了边框，方便查看效果*/
-    padding:10px 0;
-    }
-#div_left{
-    width:660px;
-    height:500px;
-    border:1px solid #f00;
-    float:left;
-    }
-#div_right{
-    width:288px;
-    height:300px;
-    border:1px solid #f00;
-    float:right;
-    }
-.clear{
-    clear:both;
-    }
-</style>
-</head>
+<meta charset="UTF-8">
+<title>Document</title>
+<script type="text/javascript">
 
+window.onload=function(){
+var oImg=document.getElementById('img1');
+var arrImgUrl=["img/1.jpg","img/2.jpg","img/3.jpg","img/4.jpg"]
+var num=0;
+function Tab(){
+num++;
+if(num>arrImgUrl.length-1){
+num=0;
+}
+oImg.src=arrImgUrl[num];
+}
+
+setInterval(Tab,1000)
+}
+
+</script>
+</head>
 <body>
-<div id="div_body">
-   <div id="div_left">这里是左侧的部分</div>
-   <div id="div_right">这里是右侧的部分</div>
-   <div class="clear"></div><!--清除浮动-->
-</div>
+<img id="img1" src="img/1.jpg" width="288">
 </body>
 </html>
