--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 window.onload=function(){
 var oImg=document.getElementById('img1');
-var arrImgUrl=["img/1.jpg","img/2.jpg","img/3.jpg","img/4.jpg"]
+var arrImgUrl=["img1.jpg","img2.jpg","img3.jpg","img4.jpg"]
 var num=0;
 function Tab(){
 num++;
@@ -23,6 +23,6 @@ setInterval(Tab,1000)
 </script>
 </head>
 <body>
-<img id="img1" src="img/1.jpg" width="288">
+<img id="img1" src="img1.jpg" width="288">
 </body>
 </html>
