--- a/index.html
+++ b/index.html
@@ -26,3 +26,8 @@ setInterval(Tab,1000)
 <img id="img1" src="img1.jpg" width="288">
 </body>
 </html>
+<marquee> 
+<img src="img1.jpg"> 
+<img src="img2.jpg"> 
+<img src="img3.jpg"> 
+</marquee> 
