--- a/index.html
+++ b/index.html
@@ -1,25 +1,52 @@
-
-<meta charset="UTF-8">
-<title>Document</title>
-<script type="text/javascript">
-
-window.onload=function(){
-var oImg=document.getElementById('img1');
-var arrImgUrl=["img1.jpg","img2.jpg","img3.jpg","img4.jpg"]
-var num=0;
-function Tab(){
-num++;
-if(num>arrImgUrl.length-1){
-num=0;
-}
-oImg.src=arrImgUrl[num];
-}
-
-setInterval(Tab,1000)
-}
-
-</script>
-</head>
-<body>
-<img id="img1" src="img1.jpg" width="400">
-
+<html> 
+ 
+<head> 
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312"> 
+<title>JS特效，点击图片将其放大</title> 
+</head> 
+ 
+<body> 
+<script language="JavaScript"> 
+<!-- 
+function MM_showHideLayers() { //v3.0 
+var i,p,v,obj,args=MM_showHideLayers.arguments; 
+for (i=0; i<(args.length-2); i+=3) if ((obj=MM_findObj(args[i]))!=null) { v=args[i+2]; 
+    if (obj.style) { obj=obj.style; v=(v=='show')?'visible':(v='hide')?'hidden':v; } 
+    obj.visibility=v; } 
+} 
+ 
+function MM_findObj(n, d) { //v4.01 
+var p,i,x; if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) { 
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);} 
+if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n]; 
+for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document); 
+if(!x && d.getElementById) x=d.getElementById(n); return x; 
+} 
+//--> 
+</script> 
+<a href="" onClick="return false"><img name="small" border="0" src="http://img.hexun.com/2011-05-27/130014115.jpg" width="80" height="60" onClick="MM_showHideLayers('layer2','','show');MM_showHideLayers('layer','','hide');MM_showHideLayers('layer1','','hide');"></a>  
+<div id="layer2" style="position: absolute; left: 14px; top: 3px; width: 765; height: 202; z-index: 1; visibility: hidden">  
+<table border="0" width="761" height="216" cellspacing="0" cellpadding="0"> 
+    <tr bordercolor="#FFFFFF">  
+      <td width="624" valign="top" align="left"> 　  
+        <div align="center">  
+          <center> 
+            <table border="0" width="122%" height="181" cellspacing="0" cellpadding="0"> 
+              <tr>  
+                <td width="100%" height="151" valign="top" align="center"><a href="" onclick="return false" ><img name="big" src="http://img.hexun.com/2011-05-27/130014115.jpg" onclick="MM_showHideLayers('layer2','','hide');MM_showHideLayers('layer','','show');MM_showHideLayers('layer1','','show');return false;" border="0" width="450" height="280"></a>  
+                </td> 
+              </tr> 
+              <tr>  
+                <td width="100%" height="12" valign="top" align="center">　</td> 
+              </tr> 
+            </table> 
+          </center> 
+        </div> 
+      </td> 
+    </tr> 
+</table> 
+</div> 
+ 
+</body> 
+ 
+</html>
