--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@ if(!x && d.getElementById) x=d.getElementById(n); return x;
 } 
 //--> 
 </script> 
-<a href="" onClick="return false"><img name="small" border="0" src="http://img.hexun.com/2011-05-27/130014115.jpg" width="400" height="200" onClick="MM_showHideLayers('layer2','','show');MM_showHideLayers('layer','','hide');MM_showHideLayers('layer1','','hide');"></a>  
-<div id="layer2" style="position: absolute; left: 14px; top: 3px; width: 1765; height: 1202; z-index: 1; visibility: hidden">  
-<table border="0" width="1761" height="1216" cellspacing="0" cellpadding="0"> 
+<a href="" onClick="return false"><img name="small" border="0" src="http://img.hexun.com/2014-05-27/130014115.jpg" width="1400" height="1200" onClick="MM_showHideLayers('layer2','','show');MM_showHideLayers('layer','','hide');MM_showHideLayers('layer1','','hide');"></a>  
+<div id="layer2" style="position: absolute; left: 14px; top: 3px; width: 1765; height: 1765; z-index: 1; visibility: hidden">  
+<table border="20" width="1761" height="1216" cellspacing="0" cellpadding="0"> 
     <tr bordercolor="#FFFFFF">  
       <td width="624" valign="top" align="left"> 　  
         <div align="center">  
           <center> 
-            <table border="0" width="122%" height="181%" cellspacing="0" cellpadding="0"> 
+            <table border="0" width="122%" height="181" cellspacing="0" cellpadding="0"> 
               <tr>  
                 <td width="100%" height="151" valign="top" align="center"><a href="" onclick="return false" ><img name="big" src="http://img.hexun.com/2011-05-27/130014115.jpg" onclick="MM_showHideLayers('layer2','','hide');MM_showHideLayers('layer','','show');MM_showHideLayers('layer1','','show');return false;" border="0" width="450" height="280"></a>  
                 </td> 
@@ -48,5 +48,7 @@ if(!x && d.getElementById) x=d.getElementById(n); return x;
 </div> 
  
 </body> 
+ 
+ 
  
 </html>
