--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ if(!x && d.getElementById) x=d.getElementById(n); return x;
 } 
 //--> 
 </script> 
-<a href="" onClick="return false"><img name="small" border="0" src="http://img.hexun.com/2014-05-27/130014115.jpg" width="400" height="200" onClick="MM_showHideLayers('layer2','','show');MM_showHideLayers('layer','','hide');MM_showHideLayers('layer1','','hide');"></a>  
+<a href="" onClick="return false"><img name="small" border="0" src="http://image.so.com/zv?ch=news&src=home_news#ch=news&src=home_news&groupid=30773a57357dec17e5d0a023b0bfebfc&itemindex=0&dataindex=18" width="400" height="200" onClick="MM_showHideLayers('layer2','','show');MM_showHideLayers('layer','','hide');MM_showHideLayers('layer1','','hide');"></a>  
 <div id="layer2" style="position: absolute; left: 14px; top: 3px; width: 1765; height: 1765; z-index: 1; visibility: hidden">  
 <table border="2" width="1761" height="1216" cellspacing="1" cellpadding="1"> 
     <tr bordercolor="#FFFFFF">  
