--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ if(!x && d.getElementById) x=d.getElementById(n); return x;
           <center> 
             <table border="0" width="122%" height="181" cellspacing="0" cellpadding="0"> 
               <tr>  
-                <td width="100%" height="151" valign="top" align="center"><a href="" onclick="return false" ><img name="big" src="http://img.hexun.com/2011-05-27/130014115.jpg" onclick="MM_showHideLayers('layer2','','hide');MM_showHideLayers('layer','','show');MM_showHideLayers('layer1','','show');return false;" border="0" width="450" height="280"></a>  
+                <td width="100%" height="151" valign="top" align="center"><a href="" onclick="return false" ><img name="big" src="http://p1.so.qhimgs1.com/t01baa77d65704be141.jpg" onclick="MM_showHideLayers('layer2','','hide');MM_showHideLayers('layer','','show');MM_showHideLayers('layer1','','show');return false;" border="0" width="2450" height="1000"></a>  
                 </td> 
               </tr> 
               <tr>  
